--- a/reference.bib
+++ b/reference.bib
@@ -28,6 +28,7 @@
 @String { TPAMI    = {IEEE Trans. Pattern Anal. Mach. Intell.} }
 @String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
 
+
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas Guibas},
   title     = {Learning representations and generative models for {3D} point clouds},
@@ -44,7 +45,6 @@
   volume  = {28},
   number  = {3}
 }
-
 
 @article{Adams2010,
   author  = {Adams, Andrew and Baek, Jongmin and Davis, Myers Abraham},
@@ -115,6 +115,7 @@
   year      = {1999}
 }
 
+
 @inproceedings{Aoki2019,
   author    = {Aoki, Yasuhiro and Goforth, Hunter and Arun Srivatsan, Rangaprasad and Lucey, Simon},
   booktitle = CVPR,
@@ -129,7 +130,6 @@
   booktitle = CVPR,
   year      = {2016}
 }
-
 
 @article{Armeni2017,
   title   = {Joint {2D-3D}-Semantic Data for Indoor Scene Understanding},
@@ -419,6 +419,7 @@
   number  = {5}
 }
 
+
 @inproceedings{Boyer2011,
   author    = {Boyer, E. and Bronstein, A. M. and Bronstein, M. M. and Bustos, B. and Darom, T. and Horaud, R. and Hotz, I. and Keller, Y. and Keustermans, J. and Kovnatsky, A. and Litman, R. and Reininghaus, J. and Sipiran, I. and Smeets, D. and Suetens, P. and Vandermeulen, D. and Zaharescu, A. and Zobel, V.},
   title     = {{SHREC 2011}: Robust feature detection and description benchmark},
@@ -433,7 +434,6 @@
   year      = {2015},
   publisher = {CRC press}
 }
-
 
 @inproceedings{Brock2016,
   author    = {Andrew Brock and Theodore Lim and J.M. Ritchie and Nick Weston},
@@ -450,6 +450,7 @@
   year    = {2017}
 }
 
+
 @inproceedings{Brown2020,
   title     = {Language models are few-shot learners},
   author    = {Brown, Tom B and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and others},
@@ -465,7 +466,6 @@
   volume  = {9},
   year    = {2021}
 }
-
 
 @inproceedings{Burger2012,
   author    = {Burger, H.C. and Schuler, C.J. and Harmeling, S.},
@@ -520,6 +520,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Chabra2020,
   title     = {Deep Local Shapes: Learning Local {SDF} Priors for Detailed {3D} Reconstruction},
   author    = {Chabra, Rohan and Lenssen, Jan Eric and Ilg, Eddy and Schmidt, Tanner and Straub, Julian and Lovegrove, Steven and Newcombe, Richard},
@@ -535,13 +536,13 @@
   year    = {2015}
 }
 
-
 @inproceedings{Chang2017,
   author    = {Chang, Angel and Dai, Angela and Funkhouser, Thomas and Halber, Maciej and Niessner, Matthias and Savva, Manolis and Song, Shuran and Zeng, Andy and Zhang, Yinda},
   title     = {{Matterport3D}: Learning from {RGB-D} Data in Indoor Environments},
   booktitle = threeDV,
   year      = {2017}
 }
+
 
 @inproceedings{Chellapilla2006,
   author    = {Chellapilla, Kumar and Puri, Sidd and Simard, Patrice},
@@ -550,13 +551,13 @@
   year      = {2006}
 }
 
+
 @inproceedings{Chen1990,
   title     = {Shortest paths on a polyhedron},
   author    = {Chen, Jindong and Han, Yijie},
   booktitle = {Proceedings of the sixth annual symposium on Computational geometry},
   year      = {1990}
 }
-
 
 @article{Chen2003,
   author    = {Chen, Ding-Yun and Tian, Xiao-Pei and Shen, Yu-Te and Ouhyoung, Ming},
@@ -593,13 +594,13 @@
   number  = {4}
 }
 
+
 @inproceedings{Chen2019,
   title     = {Learning implicit fields for generative shape modeling},
   author    = {Chen, Zhiqin and Zhang, Hao},
   booktitle = CVPR,
   year      = {2019}
 }
-
 
 @inproceedings{Chen2019a,
   author    = {Zhiqin Chen and Kangxue Yin and Matthew Fisher and Siddhartha Chaudhuri and Hao Zhang},
@@ -608,7 +609,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Chen2020,
   title     = {A simple framework for contrastive learning of visual representations},
   author    = {Chen, Ting and Kornblith, Simon and Norouzi, Mohammad and Hinton, Geoffrey},
@@ -616,12 +616,14 @@
   year      = {2020}
 }
 
+
 @inproceedings{Chen2020a,
   title     = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
   author    = {Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey},
   booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @inproceedings{Chen2020b,
   title     = {A hierarchical graph network for {3D} object detection on point clouds},
@@ -695,7 +697,6 @@
   year      = {2019}
 }
 
-
 @article{Chu2021,
   title   = {Conditional positional encodings for vision transformers},
   author  = {Chu, Xiangxiang and Tian, Zhi and Zhang, Bo and Wang, Xinlong and Wei, Xiaolin and Xia, Huaxia and Shen, Chunhua},
@@ -709,6 +710,7 @@
   title     = {Twins: Revisiting the Design of Spatial Attention in Vision Transformers},
   year      = {2021}
 }
+
 
 @article{Chuang2011,
   author  = {Chuang, Ming and Kazhdan, Michael},
@@ -773,7 +775,6 @@
   year      = {2013}
 }
 
-
 @article{Crane2013a,
   title   = {Geodesics in heat: A new approach to computing distance based on heat flow},
   author  = {Crane, Keenan and Weischedel, Clarisse and Wardetzky, Max},
@@ -789,6 +790,7 @@
   booktitle = {SIGGRAPH},
   year      = {1996}
 }
+
 
 @article{Cybenko1989,
   title   = {Approximation by superpositions of a sigmoidal function},
@@ -806,7 +808,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Dai2017a,
   author    = {Dai, Angela and Chang, Angel X. and Savva, Manolis and Halber, Maciej and Funkhouser, Thomas and Nie{\ss}ner, Matthias},
   booktitle = CVPR,
@@ -820,6 +821,7 @@
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Dai2018a,
   title     = {{3DMV}: Joint {3D}-multi-view prediction for {3D} semantic scene segmentation},
@@ -984,7 +986,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Fan2022,
   title     = {Embracing single stride {3D} object detector with sparse transformer},
   author    = {Fan, Lue and Pang, Ziqi and Zhang, Tianyuan and Wang, Yu-Xiong and Zhao, Hang and Wang, Feng and Wang, Naiyan and Zhang, Zhaoxiang},
@@ -998,6 +999,7 @@
   booktitle = CVPR,
   year      = {2014}
 }
+
 
 @inproceedings{Fey2018,
   title     = {{SplineCNN}: Fast Geometric Deep Learning with Continuous {B}-Spline Kernels},
@@ -1020,14 +1022,12 @@
   year      = {2016}
 }
 
-
 @article{Fish2014,
   author  = {Noa Fish and Melinos Averkiou and Oliver van Kaick and Olga Sorkine-Hornung and Daniel Cohen-Or and Niloy J. Mitra},
   title   = {Meta-representation of shape families},
   journal = SIG,
   year    = {2014}
 }
-
 
 @article{Fleishman2003,
   author  = {Fleishman, Shachar and Drori, Iddo and Cohen-Or, Daniel},
@@ -1038,12 +1038,14 @@
   number  = {3}
 }
 
+
 @inproceedings{Frisken2000,
   author    = {Frisken, Sarah F. and Perry, Ronald N. and Rockwood, Alyn P. and Jones, Thouis R.},
   title     = {Adaptively sampled distance fields: A general representation of shape for computer graphics},
   booktitle = {SIGGRAPH},
   year      = {2000}
 }
+
 
 @article{Fuhrmann2014,
   author  = {Fuhrmann, Simon and Goesele, Michael},
@@ -1053,7 +1055,6 @@
   volume  = {33},
   number  = {4}
 }
-
 
 @article{Furuya2019,
   author  = {Takahiko Furuya and Ryutarou Ohbuchi},
@@ -1070,13 +1071,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{GarciaGarcia2016,
   author    = {A. Garcia-Garcia and F. Gomez-Donoso and J. Garcia-Rodriguez and S. Orts-Escolano and M. Cazorla and J. Azorin-Lopez},
   booktitle = {2016 International Joint Conference on Neural Networks (IJCNN)},
   title     = {{PointNet}: A {3D} convolutional neural network for real-time object class recognition},
   year      = {2016}
 }
-
 
 @inproceedings{Gehring2017,
   author    = {Jonas Gehring and Michael Auli and David Grangier and Denis Yarats and Yann N. Dauphin},
@@ -1085,7 +1086,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Genova2020,
   title     = {Local Deep Implicit Functions for {3D} Shape},
   author    = {Genova, Kyle and Cole, Forrester and Sud, Avneesh and Sarna, Aaron and Funkhouser, Thomas},
@@ -1093,12 +1093,14 @@
   year      = {2020}
 }
 
+
 @inproceedings{Gilmer2017,
   title     = {Neural message passing for quantum chemistry},
   author    = {Gilmer, Justin and Schoenholz, Samuel S and Riley, Patrick F and Vinyals, Oriol and Dahl, George E},
   booktitle = ICML,
   year      = {2017}
 }
+
 
 @inproceedings{Girdhar2016,
   title     = {Learning a predictable and generative vector representation for objects},
@@ -1295,7 +1297,6 @@
   year      = {2017}
 }
 
-
 @article{Han2017a,
   author  = {Han, Xiaoguang and Gao, Chang and Yu, Yizhou},
   title   = {{DeepSketch2Face}: A deep learning based sketching system for {3D} face and caricature modeling},
@@ -1304,7 +1305,6 @@
   volume  = {36},
   number  = {4}
 }
-
 
 @article{Han2019,
   author  = {Han, Zhizhong and Lu, Honglei and Liu, Zhenbao and Vong, Chi-Man and Liu, Yu-Shen and Zwicker, Matthias and Han, Junwei and Chen, CL Philip},
@@ -1323,6 +1323,7 @@
   year      = {2016}
 }
 
+
 @article{Hanocka2019,
   author  = {Hanocka, Rana and Hertz, Amir and Fish, Noa and Giryes, Raja and Fleishman, Shachar and Cohen-Or, Daniel},
   journal = SIG,
@@ -1331,6 +1332,7 @@
   number  = {4},
   volume  = {38}
 }
+
 
 @article{Harary2014,
   author  = {Harary, Gur and Tal, Ayellet and Grinspun, Eitan},
@@ -1449,7 +1451,6 @@
   year      = {2021}
 }
 
-
 @article{Hu2012,
   author  = {Ruizhen Hu and Lubin Fan and Ligang Liu},
   title   = {Co-segmentation of {3D} shapes via subspace clustering},
@@ -1459,7 +1460,6 @@
   number  = {5}
 }
 
-
 @inproceedings{Hu2019,
   title   = {{RandLA-Net}: Efficient Semantic Segmentation of Large-Scale Point Clouds},
   author  = {Hu, Qingyong and Yang, Bo and Xie, Linhai and Rosa, Stefano and Guo, Yulan and Wang, Zhihua and Trigoni, Niki and Markham, Andrew},
@@ -1467,12 +1467,14 @@
   year    = {2020}
 }
 
+
 @inproceedings{Hu2020,
   title     = {{JSENet}: Joint semantic segmentation and edge detection network for 3d point clouds},
   author    = {Hu, Zeyu and Zhen, Mingmin and Bai, Xuyang and Fu, Hongbo and Tai, Chiew-lan},
   booktitle = ECCV,
   year      = {2020}
 }
+
 
 @article{Huang2006,
   author  = {Huang, Jin and Shi, Xiaohan and Liu, Xinguo and Zhou, Kun and Wei, Li-Yi and Teng, Shang-Hua and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
@@ -1527,14 +1529,12 @@
   articleno = {20}
 }
 
-
 @inproceedings{Izadi2011,
   author    = {Izadi, Shahram and Kim, David and Hilliges, Otmar and Molyneaux, David and Newcombe, Richard and Kohli, Pushmeet and Shotton, Jamie and Hodges, Steve and Freeman, Dustin and Davison, Andrew and Fitzgibbon, Andrew},
   title     = {{KinectFusion}: real-time {3D} reconstruction and interaction using a moving depth camera},
   booktitle = {Proceedings of the 24th Annual ACM Symposium on User Interface Software and Technology},
   year      = {2011}
 }
-
 
 @inproceedings{Jacot2018,
   title     = {Neural tangent kernel: Convergence and generalization in neural networks},
@@ -1543,12 +1543,14 @@
   year      = {2018}
 }
 
+
 @inproceedings{Jampani2016,
   author    = {Jampani, Varun and Kiefel, Martin and Gehler, Peter V.},
   title     = {Learning sparse high dimensional filters: image filtering, dense {CRFs} and bilateral neural networks},
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @inproceedings{Jia2014,
   author    = {Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor},
@@ -1722,7 +1724,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Karras2019,
   author    = {Karras, Tero and Laine, Samuli and Aila, Timo},
   title     = {A style-based generator architecture for generative adversarial networks},
@@ -1736,6 +1737,7 @@
   booktitle = CVPR,
   year      = {2020}
 }
+
 
 @article{Karras2021,
   author  = {Tero Karras and Miika Aittala and Samuli Laine and Erik H\"{a}rk\"{o}nen and Janne Hellsten and Jaakko Lehtinen and Timo Aila},
@@ -1827,6 +1829,13 @@
   author    = {Kingma, Diederik P. and Ba, Jimmy},
   booktitle = ICLR,
   year      = {2014}
+}
+
+@inproceedings{Kirillov2019,
+  title     = {Panoptic feature pyramid networks},
+  author    = {Kirillov, Alexander and Girshick, Ross and He, Kaiming and Doll{\'a}r, Piotr},
+  booktitle = CVPR,
+  year      = {2019}
 }
 
 @inproceedings{Klokov2017,
@@ -2134,13 +2143,13 @@
   year      = {2019}
 }
 
-
 @inproceedings{Liu2020,
   title     = {Neural sparse voxel fields},
   author    = {Liu, Lingjie and Gu, Jiatao and Zaw Lin, Kyaw and Chua, Tat-Seng and Theobalt, Christian},
   booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @article{Liu2020a,
   title   = {{P4Contrast}: Contrastive Learning with Pairs of Point-Pixel Pairs for {RGB-D} Scene Understanding},
@@ -2205,13 +2214,13 @@
   year      = {2015}
 }
 
-
 @book{Logan2017,
   title     = {A first course in the finite element method},
   author    = {Logan, Daryl L},
   year      = {2017},
   publisher = {Nelson Education}
 }
+
 
 @inproceedings{Long2015,
   author    = {Jonathan Long and Evan Shelhamer and Trevor Darrell},
@@ -2234,13 +2243,13 @@
   year      = {2019}
 }
 
-
 @inproceedings{Lowe1989,
   author    = {Lowe, David},
   title     = {Adaptive radial basis function nonlinearities, and the problem of generalisation},
   booktitle = {the 1st IEE International Conference on Artificial Neural Networks},
   year      = {1989}
 }
+
 
 @article{Lu2016,
   author  = {Xuequan Lu and Zhigang Deng and and Wenzhi Chen},
@@ -2258,7 +2267,6 @@
   year      = {2017}
 }
 
-
 @article{Lun2017a,
   author  = {Lun, Zhaoliang and Gadelha, Matheus and Kalogerakis, Evangelos and Maji, Subhransu and Wang, Rui},
   title   = {{3D} shape reconstruction from sketches via multi-view convolutional networks},
@@ -2274,6 +2282,7 @@
   year      = {2020}
 }
 
+
 @article{Maaten2008,
   author  = {Maaten, Laurens van der and Hinton, Geoffrey},
   title   = {Visualizing data using {t-SNE}},
@@ -2281,13 +2290,13 @@
   year    = {2008}
 }
 
-
 @inproceedings{Maes2010,
   author    = {Maes, C. and Fabry, T. and Keustermans, J. and Smeets, D. and Suetens, P. and Vandermeulen, D.},
   title     = {Feature detection on {3D} face surfaces for pose normalisation and recognition},
   booktitle = {Biometrics: Theory Applications and Systems (BTAS)},
   year      = {2010}
 }
+
 
 @inproceedings{Makhzani2016,
   author       = {Alireza Makhzani and Jonathon Shlens and Navdeep Jaitly and Ian J. Goodfellow},
@@ -2306,13 +2315,13 @@
   number  = {6}
 }
 
-
 @inproceedings{Mao2021,
   title     = {Voxel Transformer for {3D} Object Detection},
   author    = {Mao, Jiageng and Xue, Yujing and Niu, Minzhe and Bai, Haoyue and Feng, Jiashi and Liang, Xiaodan and Xu, Hang and Xu, Chunjing},
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Martel2021,
   title   = {{ACORN}: {Adaptive} coordinate networks for neural scene representation},
@@ -2719,13 +2728,13 @@
   year    = {2020}
 }
 
-
 @inproceedings{Rahaman2019,
   title     = {On the spectral bias of neural networks},
   author    = {Rahaman, Nasim and Baratin, Aristide and Arpit, Devansh and Draxler, Felix and Lin, Min and Hamprecht, Fred and Bengio, Yoshua and Courville, Aaron},
   booktitle = ICML,
   year      = {2019}
 }
+
 
 @inproceedings{Rahimi2018,
   title     = {Random features for large-scale kernel machines},
@@ -2743,7 +2752,6 @@
   year    = {2019}
 }
 
-
 @article{Rainer2020,
   author  = {Rainer, Gilles and Ghosh, Abhijeet and Jakob, Wenzel and Weyrich, Tim},
   title   = {Unified Neural Encoding of {BTFs}},
@@ -2760,6 +2768,7 @@
   journal = {arXiv preprint arXiv:2204.06125},
   year    = {2022}
 }
+
 
 @article{Raviv2010,
   title   = {Full and partial symmetries of non-rigid shapes},
@@ -2919,13 +2928,13 @@
   year      = {2016}
 }
 
-
 @inproceedings{Schaefer2004,
   title     = {Dual marching cubes: Primal contouring of dual grids},
   author    = {Schaefer, Scott and Warren, Joe},
   booktitle = {Pacific Graphics},
   year      = {2004}
 }
+
 
 @inproceedings{Schelten2015,
   author    = {Schelten, K. and Nowozin, S. and Jancsary, J. and Rother, C. and Roth, S.},
@@ -2943,13 +2952,13 @@
   number  = {4}
 }
 
-
 @inproceedings{Sedaghat2016,
   author    = {Nima Sedaghat and Mohammadreza Zolfaghari and Thomas Brox},
   title     = {Orientation-boosted voxel nets for {3D} object recognition},
   booktitle = BMVC,
   year      = {2016}
 }
+
 
 @article{Sethian1999,
   title   = {Fast marching methods},
@@ -3011,13 +3020,13 @@
   year    = {2007}
 }
 
-
 @inproceedings{Sharma2016,
   title     = {{VConv-DAE}: Deep volumetric shape learning without object labels},
   author    = {Sharma, Abhishek and Grau, Oliver and Fritz, Mario},
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Sharma2018,
   author    = {Gopal Sharma and Rishabh Goyal and Difan Liu and Evangelos Kalogerakis and Subhransu Maji},
@@ -3033,7 +3042,6 @@
   year    = {2018}
 }
 
-
 @article{Sharp2020,
   title   = {You can find geodesic paths in triangle meshes by just flipping edges},
   author  = {Sharp, Nicholas and Crane, Keenan},
@@ -3042,6 +3050,7 @@
   number  = {6},
   year    = {2020}
 }
+
 
 @article{Shen2004,
   author  = {Yuzhong Shen and Barner, K.E.},
@@ -3108,7 +3117,6 @@
   number  = {6}
 }
 
-
 @inproceedings{Silva2002,
   author    = {Silva, Vin D and Tenenbaum, Joshua B},
   title     = {Global versus local methods in nonlinear dimensionality reduction},
@@ -3124,6 +3132,7 @@
   year      = {2017}
 }
 
+
 @inproceedings{Sinha2016,
   author    = {Ayan Sinha and Jing Bai and Karthik Ramani},
   title     = {Deep learning {3D} shape surfaces using geometry images},
@@ -3131,13 +3140,13 @@
   year      = {2016}
 }
 
-
 @inproceedings{Sinha2017,
   author    = {Ayan Sinha and Asim Unmesh and Qixing Huang and Karthik Ramani},
   title     = {{SurfNet}: Generating {3D} shape surfaces using deep residual networks},
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @article{Sirignano2018,
   title   = {{DGM}: A deep learning algorithm for solving partial differential equations},
@@ -3181,7 +3190,6 @@
   year      = {2015}
 }
 
-
 @inproceedings{Song2017,
   author    = {Song, Shuran and Yu, Fisher and Zeng, Andy and Chang, Angel X and Savva, Manolis and Funkhouser, Thomas},
   title     = {Semantic scene completion from a single depth image},
@@ -3198,13 +3206,13 @@
   year         = {2019}
 }
 
+
 @inproceedings{Sorkine2004,
   author    = {Sorkine, O. and Cohen-Or, D. and Lipman, Y. and Alexa, M. and R\"{o}ssl, C. and Seidel, H.-P.},
   title     = {Laplacian surface editing},
   booktitle = SGPOLD,
   year      = {2004}
 }
-
 
 @article{Srivastava2014,
   author  = {Srivastava, Nitish and Hinton, Geoffrey E and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
@@ -3214,6 +3222,7 @@
   volume  = {15},
   number  = {1}
 }
+
 
 @inproceedings{Stutz2018,
   author    = {Stutz, David and Geiger, Andreas},
@@ -3279,7 +3288,6 @@
   number  = {2}
 }
 
-
 @article{Sun2009a,
   author       = {Sun, Jian and Ovsjanikov, Maks and Guibas, Leonidas},
   title        = {A concise and provably informative multi-scale signature based on heat diffusion},
@@ -3297,6 +3305,7 @@
   booktitle = CVPR,
   year      = {2015}
 }
+
 
 @inproceedings{Sun2022,
   title     = {{SWFormer}: Sparse Window Transformer for {3D} Object Detection in Point Clouds},
@@ -3362,7 +3371,6 @@
   year    = {2018}
 }
 
-
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
   author    = {Tang, Haotian and Liu, Zhijian and Zhao, Shengyu and Lin, Yujun and Lin, Ji and Wang, Hanrui and Han, Song},
@@ -3377,6 +3385,7 @@
   booktitle = NeurIPS,
   year      = {2021}
 }
+
 
 @inproceedings{Tang2021a,
   title     = {{SA-ConvONet}: Sign-Agnostic Optimization of Convolutional Occupancy Networks},
@@ -3422,7 +3431,6 @@
   year      = {1995}
 }
 
-
 @inproceedings{Thomas2019,
   author    = {Hugues Thomas and Charles R. Qi and Jean-Emmanuel Deschaud and Beatriz Marcotegui and Fran\c{c}ois Goulette and Leonidas J. Guibas},
   title     = {{KPConv}: Flexible and deformable convolution for point clouds},
@@ -3438,13 +3446,13 @@
   year      = {2020}
 }
 
+
 @inproceedings{Tobin2017,
   title     = {Domain randomization for transferring deep neural networks from simulation to the real world},
   author    = {Tobin, Josh and Fong, Rachel and Ray, Alex and Schneider, Jonas and Zaremba, Wojciech and Abbeel, Pieter},
   booktitle = IROS,
   year      = {2017}
 }
-
 
 @inproceedings{Tomasi1998,
   author    = {C. Tomasi and R. Manduchi},
@@ -3460,6 +3468,7 @@
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @inproceedings{Tulsianiand2017,
   author    = {Shubham Tulsianiand and Hao Su and Leonidas J. Guibas and Alexei A. Efros and Jitendra Malik},
@@ -3482,13 +3491,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{Ummenhofer2021,
   title     = {Adaptive Surface Reconstruction With Multiscale Convolutional Kernels},
   author    = {Ummenhofer, Benjamin and Koltun, Vladlen},
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Vallet2008,
   title   = {Spectral geometry processing with manifold harmonics},
@@ -3513,7 +3522,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Vincent2008,
   title     = {Extracting and composing robust features with denoising autoencoders},
   author    = {Vincent, Pascal and Larochelle, Hugo and Bengio, Yoshua and Manzagol, Pierre-Antoine},
@@ -3528,6 +3536,7 @@
   year      = {2019},
   booktitle = ICCV
 }
+
 
 @article{Wang2012,
   author  = {Jun Wang and Xi Zhang and Zeyun Yu},
@@ -3765,7 +3774,6 @@
   year      = {2021}
 }
 
-
 @inproceedings{Williams2022,
   title     = {Neural Fields as Learnable Kernels for {3D} Reconstruction},
   author    = {Williams, Francis and Gojcic, Zan and Khamis, Sameh and Zorin, Denis and Bruna, Joan and Fidler, Sanja and Litany, Or},
@@ -3782,6 +3790,7 @@
   volume  = {24},
   number  = {3}
 }
+
 
 @inproceedings{Wu2015,
   author    = {Wu, Zhirong and Song, Shuran and Khosla, Aditya and Yu, Fisher and Zhang, Linguang and Tang, Xiaoou and Xiao, Jianxiong},
@@ -3852,13 +3861,13 @@
   year    = {2020}
 }
 
-
 @inproceedings{Wu2021,
   title     = {{CvT}: Introducing convolutions to vision transformers},
   author    = {Wu, Haiping and Xiao, Bin and Codella, Noel and Liu, Mengchen and Dai, Xiyang and Yuan, Lu and Zhang, Lei},
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @inproceedings{Wu2022,
   title     = {Point Transformer V2: Grouped Vector Attention and Partition-based Pooling},
@@ -3897,7 +3906,6 @@
   year    = {2020}
 }
 
-
 @inproceedings{Xie2020a,
   title     = {{MLCVNet}: Multi-level context votenet for {3D} object detection},
   author    = {Xie, Qian and Lai, Yu-Kun and Wu, Jing and Wang, Zhoutao and Zhang, Yiming and Xu, Kai and Wang, Jun},
@@ -3912,6 +3920,7 @@
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Xie2021a,
   title     = {{VENet}: Voting Enhancement Network for {3D} Object Detection},
@@ -3991,7 +4000,6 @@
   year      = {2021}
 }
 
-
 @inproceedings{Yagou2002,
   author    = {H. Yagou and Y. Ohtake and A. Belyaev},
   title     = {Mesh smoothing via mean and median filtering applied to face normals},
@@ -4007,6 +4015,7 @@
   year      = {2003},
   issn      = {1530-1052}
 }
+
 
 @inproceedings{Yan2006,
   author    = {Yan, Dong-Ming and Liu, Yang and Wang, Wenping},
@@ -4029,7 +4038,6 @@
   year    = {2020}
 }
 
-
 @inproceedings{Yan2020a,
   title     = {{PointASNL}: Robust point clouds processing using nonlocal neural networks with adaptive sampling},
   author    = {Yan, Xu and Zheng, Chaoda and Li, Zhen and Wang, Sheng and Cui, Shuguang},
@@ -4047,6 +4055,7 @@
   year    = {2015}
 }
 
+
 @inproceedings{Yang2017,
   author    = {Bo Yang and Hongkai Wen and Sen Wang and Ronald Clark and Andrew Markham and Niki Trigoni},
   title     = {{3D} object reconstruction from a single depth view with adversarial learning},
@@ -4061,13 +4070,13 @@
   year    = {2018}
 }
 
-
 @inproceedings{Yang2018a,
   author    = {Yaoqing Yang and Chen Feng and Yiru Shen and Dong Tian},
   booktitle = CVPR,
   title     = {{FoldingNet}: Point cloud auto-encoder via deep grid deformation},
   year      = {2018}
 }
+
 
 @article{Yang2020,
   title   = {Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes},
@@ -4115,7 +4124,6 @@
   year      = {2017}
 }
 
-
 @article{Yin2018,
   author  = {Kangxue Yin and Hui Huang and Daniel Cohen-Or and Hao Zhang},
   title   = {{P2P-NET}: Bidirectional Point Displacement Net for Shape Transform},
@@ -4145,6 +4153,7 @@
   year    = {2014}
 }
 
+
 @inproceedings{You2018,
   author    = {You, Haoxuan and Feng, Yifan and Ji, Rongrong and Gao, Yue},
   booktitle = {Proceedings of the 26th ACM international conference on Multimedia},
@@ -4161,7 +4170,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Yu2018,
   author    = {Yu, Lequan and Li, Xianzhi and Fu, Chi-Wing and Cohen-Or, Daniel and Heng, Pheng-Ann},
   title     = {{PU-Net}: Point Cloud Upsampling Network},
@@ -4177,6 +4185,7 @@
   year      = {2019}
 }
 
+
 @inproceedings{Yu2021,
   title     = {{Lite-HRNet}: A Lightweight High-Resolution Network},
   author    = {Yu, Changqian and Xiao, Bin and Gao, Changxin and Yuan, Lu and Zhang, Lei and Sang, Nong and Wang, Jingdong},
@@ -4187,6 +4196,13 @@
 @inproceedings{Yu2022,
   title     = {{Point-BERT}: Pre-training {3D} point cloud transformers with masked point modeling},
   author    = {Yu, Xumin and Tang, Lulu and Rao, Yongming and Huang, Tiejun and Zhou, Jie and Lu, Jiwen},
+  booktitle = CVPR,
+  year      = {2022}
+}
+
+@inproceedings{Yu2022a,
+  title     = {Metaformer is actually what you need for vision},
+  author    = {Yu, Weihao and Luo, Mi and Zhou, Pan and Si, Chenyang and Zhou, Yichen and Wang, Xinchao and Feng, Jiashi and Yan, Shuicheng},
   booktitle = CVPR,
   year      = {2022}
 }
