--- a/reference.bib
+++ b/reference.bib
@@ -46,6 +46,7 @@
   number  = {3}
 }
 
+
 @article{Adams2010,
   author  = {Adams, Andrew and Baek, Jongmin and Davis, Myers Abraham},
   title   = {Fast high-dimensional filtering using the permutohedral lattice},
@@ -54,7 +55,6 @@
   volume  = {29},
   number  = {2}
 }
-
 
 @inproceedings{Adamson2003,
   author    = {Adamson, Anders and Alexa, Marc},
@@ -131,13 +131,13 @@
   year      = {2016}
 }
 
+
 @article{Armeni2017,
   title   = {Joint {2D-3D}-Semantic Data for Indoor Scene Understanding},
   author  = {Armeni, Iro and Sax, Sasha and Zamir, Amir R and Savarese, Silvio},
   journal = {arXiv preprint},
   year    = {2017}
 }
-
 
 @inproceedings{Arthur2007,
   author    = {Arthur, David and Vassilvitskii, Sergei},
@@ -207,6 +207,14 @@
   journal = CGF,
   volume  = {35},
   number  = {1},
+  year    = {2016}
+}
+
+
+@article{Ba2016,
+  title   = {Layer normalization},
+  author  = {Ba, Jimmy Lei and Kiros, Jamie Ryan and Hinton, Geoffrey E},
+  journal = {arXiv preprint arXiv:1607.06450},
   year    = {2016}
 }
 
