--- a/reference.bib
+++ b/reference.bib
@@ -56,13 +56,13 @@
   number  = {2}
 }
 
+
 @inproceedings{Adamson2003,
   author    = {Adamson, Anders and Alexa, Marc},
   title     = {Approximating and intersecting surfaces from points},
   booktitle = SGPOLD,
   year      = {2003}
 }
-
 
 @article{Adikusuma2020,
   title   = {Fast construction of discrete geodesic graphs},
@@ -139,13 +139,13 @@
   year    = {2017}
 }
 
+
 @inproceedings{Arthur2007,
   author    = {Arthur, David and Vassilvitskii, Sergei},
   title     = {K-means++: the advantages of careful seeding},
   booktitle = {SODA},
   year      = {2007}
 }
-
 
 @article{Attene2013,
   author  = {Attene, Marco and Campen, Marcel and Kobbelt, Leif},
@@ -443,13 +443,13 @@
   publisher = {CRC press}
 }
 
+
 @inproceedings{Brock2016,
   author    = {Andrew Brock and Theodore Lim and J.M. Ritchie and Nick Weston},
   title     = {Generative and discriminative voxel modeling with convolutional neural networks},
   booktitle = {3D deep learning workshop (NeurIPS)},
   year      = {2016}
 }
-
 
 @article{Bronstein2017,
   author  = {M. M. Bronstein and J. Bruna and Y. LeCun and A. Szlam and P. Vandergheynst},
@@ -475,13 +475,13 @@
   year    = {2021}
 }
 
+
 @inproceedings{Burger2012,
   author    = {Burger, H.C. and Schuler, C.J. and Harmeling, S.},
   title     = {Image denoising: Can plain neural networks compete with {BM3D}?},
   booktitle = CVPR,
   year      = {2012}
 }
-
 
 @article{Calakli2011,
   author  = {Calakli, Fatih and Taubin, Gabriel},
@@ -544,13 +544,13 @@
   year    = {2015}
 }
 
+
 @inproceedings{Chang2017,
   author    = {Chang, Angel and Dai, Angela and Funkhouser, Thomas and Halber, Maciej and Niessner, Matthias and Savva, Manolis and Song, Shuran and Zeng, Andy and Zhang, Yinda},
   title     = {{Matterport3D}: Learning from {RGB-D} Data in Indoor Environments},
   booktitle = threeDV,
   year      = {2017}
 }
-
 
 @inproceedings{Chellapilla2006,
   author    = {Chellapilla, Kumar and Puri, Sidd and Simard, Patrice},
@@ -566,6 +566,7 @@
   booktitle = {Proceedings of the sixth annual symposium on Computational geometry},
   year      = {1990}
 }
+
 
 @article{Chen2003,
   author    = {Chen, Ding-Yun and Tian, Xiao-Pei and Shen, Yu-Te and Ouhyoung, Ming},
@@ -585,13 +586,13 @@
   number  = {3}
 }
 
-
 @inproceedings{Chen2014,
   author    = {Chen, Dong and Ren, Shaoqing and Wei, Yichen and Cao, Xudong and Sun, Jian},
   title     = {Joint cascade face detection and alignment},
   booktitle = {ECCV},
   year      = {2014}
 }
+
 
 @article{Chen2018,
   author  = {L. {Chen} and G. {Papandreou} and I. {Kokkinos} and K. {Murphy} and A. L. {Yuille}},
@@ -602,13 +603,13 @@
   number  = {4}
 }
 
-
 @inproceedings{Chen2019,
   title     = {Learning implicit fields for generative shape modeling},
   author    = {Chen, Zhiqin and Zhang, Hao},
   booktitle = CVPR,
   year      = {2019}
 }
+
 
 @inproceedings{Chen2019a,
   author    = {Zhiqin Chen and Kangxue Yin and Matthew Fisher and Siddhartha Chaudhuri and Hao Zhang},
@@ -624,7 +625,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{Chen2020a,
   title     = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
   author    = {Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey},
@@ -639,6 +639,7 @@
   booktitle = CVPR,
   year      = {2020}
 }
+
 
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
@@ -719,7 +720,6 @@
   year      = {2021}
 }
 
-
 @article{Chuang2011,
   author  = {Chuang, Ming and Kazhdan, Michael},
   title   = {Interactive and anisotropic geometry processing using the screened Poisson equation},
@@ -728,6 +728,7 @@
   volume  = {30},
   number  = {4}
 }
+
 
 @article{Cignoni1998,
   author  = {P. Cignoni and C. Rocchini and R. Scopigno},
@@ -799,7 +800,6 @@
   year      = {1996}
 }
 
-
 @article{Cybenko1989,
   title   = {Approximation by superpositions of a sigmoidal function},
   author  = {Cybenko, George},
@@ -808,6 +808,7 @@
   number  = {4},
   year    = {1989}
 }
+
 
 @inproceedings{Dai2017,
   author    = {Dai, Angela and Qi, Charles R. and Niessner, Matthias},
@@ -830,13 +831,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{Dai2018a,
   title     = {{3DMV}: Joint {3D}-multi-view prediction for {3D} semantic scene segmentation},
   author    = {Dai, Angela and Nie{\ss}ner, Matthias},
   booktitle = ECCV,
   year      = {2018}
 }
+
 
 @article{DeGoes2011,
   author  = {De Goes, Fernando and Goldenstein, Siome and Desbrun, Mathieu and Velho, Luiz},
@@ -1008,13 +1009,13 @@
   year      = {2014}
 }
 
-
 @inproceedings{Fey2018,
   title     = {{SplineCNN}: Fast Geometric Deep Learning with Continuous {B}-Spline Kernels},
   author    = {Fey, Matthias and Lenssen, Jan Eric and Weichert, Frank and M{\"u}ller, Heinrich},
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Fey2019,
   title     = {Fast Graph Representation Learning with {PyTorch Geometric}},
@@ -1046,7 +1047,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Frisken2000,
   author    = {Frisken, Sarah F. and Perry, Ronald N. and Rockwood, Alyn P. and Jones, Thouis R.},
   title     = {Adaptively sampled distance fields: A general representation of shape for computer graphics},
@@ -1064,6 +1064,7 @@
   number  = {4}
 }
 
+
 @article{Furuya2019,
   author  = {Takahiko Furuya and Ryutarou Ohbuchi},
   title   = {Feature set aggregator: unsupervised representation learning of sets for their comparison},
@@ -1079,13 +1080,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{GarciaGarcia2016,
   author    = {A. Garcia-Garcia and F. Gomez-Donoso and J. Garcia-Rodriguez and S. Orts-Escolano and M. Cazorla and J. Azorin-Lopez},
   booktitle = {2016 International Joint Conference on Neural Networks (IJCNN)},
   title     = {{PointNet}: A {3D} convolutional neural network for real-time object class recognition},
   year      = {2016}
 }
+
 
 @inproceedings{Gehring2017,
   author    = {Jonas Gehring and Michael Auli and David Grangier and Denis Yarats and Yann N. Dauphin},
@@ -1101,7 +1102,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{Gilmer2017,
   title     = {Neural message passing for quantum chemistry},
   author    = {Gilmer, Justin and Schoenholz, Samuel S and Riley, Patrick F and Vinyals, Oriol and Dahl, George E},
@@ -1116,6 +1116,7 @@
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Glorot2011,
   title     = {Deep sparse rectifier neural networks},
@@ -1323,7 +1324,6 @@
   volume  = {28}
 }
 
-
 @inproceedings{Handa2015,
   title     = {{SceneNet}: Understanding Real World Indoor Scenes With Synthetic Data},
   author    = {Ankur Handa and Viorica Patraucean and Vijay Badrinarayanan and Simon Stent and Roberto Cipolla},
@@ -1351,6 +1351,7 @@
   number  = {1}
 }
 
+
 @article{Hart1996,
   title   = {Sphere tracing: A geometric method for the antialiased ray tracing of implicit surfaces},
   author  = {Hart, John C},
@@ -1365,6 +1366,13 @@
   author    = {Hassani, Kaveh and Haley, Mike},
   booktitle = ICCV,
   year      = {2019}
+}
+
+@article{Hassani2022,
+  title   = {Dilated neighborhood attention transformer},
+  author  = {Ali Hassani and Humphrey Shi},
+  journal = {arXiv preprint arXiv:2209.15001},
+  year    = {2022}
 }
 
 @article{Hassouna2009,
